# mcc

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  Pipfile  README.md  ROADMAP.md  build.sh  clean.sh  pyproject.toml  test.sh
.github/coverage/: sitecustomize.py
.github/workflows/: ci.yml  examples.yml  tests.yml
docs/: feature-analysis.md  language.md
editors/helix/: README.md  languages.toml
editors/neovim/: README.md
editors/vscode/: README.md  package.json
examples/: README.md  arithmetic.mc  arrays.mc  block_expressions.mc  case_when.mc  conditional.mc  const_params.mc  constants.mc  control_flow.mc  data_structures.mc  defer.mc  enums.mc  extern.mc  fizzbuzz.mc  flexible_array_members.mc  function_pointers.mc  functions.mc  generics.mc  helloworld-libc.mc  helloworld.mc  io.mc  iteration.mc  literals.mc  mut_params.mc  pointers.mc  primes.mc  ranges.mc  slices.mc  strings.mc  struct_literals.mc  structs.mc  type_aliases.mc  unsigned.mc  variables.mc  variadic.mc
examples/baremetal/: README.md  kernel.mc  start.S
examples/basics/: arithmetic.mc  compound_assignment.mc  constants.mc  helloworld.mc  literals.mc  unsigned.mc  variables.mc
examples/control-flow/: block_expressions.mc  branching.mc  case_when.mc  dead_code.mc  defer.mc  enumerate.mc  forever.mc  iteration.mc  ranges.mc  unreachable.mc  until.mc  while.mc
examples/functions/: const_params.mc  forward_declarations.mc  function_pointers.mc  functions.mc  mixed_overloads.mc  mut_callbacks.mc  mut_overloads.mc  mut_params.mc  mut_return_callbacks.mc  mut_returns.mc  native_variadics.mc  noalias.mc  nonnull.mc  nonnull_assert.mc  nonnull_callbacks.mc  nonnull_loops.mc  nonnull_narrowing.mc  nonnull_projections.mc  noreturn.mc  open_overloads.mc  overload_subsumption.mc  overloading.mc  override.mc  panic_assert.mc  pointer_decay.mc  reference_callbacks.mc  reference_overloads.mc  reference_params.mc  reference_return_callbacks.mc  reference_returns.mc  variadic.mc
examples/memory/: intrusive_list.mc  lists.mc  nonnull_heap_buffers.mc  pointers.mc  queues.mc  rings.mc  slice_assignment.mc  slice_literals.mc  slices.mc  stacks.mc  sub_slices.mc
examples/programs/: fizzbuzz.mc  primes.mc
examples/systems/: byte_scan.mc  c_struct_abi.mc  char_methods.mc  extern.mc  extern_nonnull.mc  formatting.mc  inline_asm.mc  interfaces.mc  io.mc
examples/types/: accessors.mc  any.mc  any_struct_boxing.mc  arrays.mc  bounds.mc  case_type_groups.mc  constructors.mc  deprecated.mc  derived_enums.mc  destructors.mc  enums.mc  error_handling.mc  extends.mc  flexible_array_members.mc  (+34 more)
lib/: README.md  array.mc  dict.mc  fnv1a.mc  hash.mc  memory.mc  queue.mc  range.mc  set.mc  splitmix64.mc  stack.mc  std.mc  string.mc
libmc/: README.md  dict.mc  equality.mc  format.mc  hash.mc  list.mc  memory.mc  queue.mc  range.mc  ring.mc  set.mc  stack.mc  std.mc  string.mc
mcc/: __init__.py  __main__.py  codegen.py  driver.py  errors.py  interface.py  lexer.py  nodes.py  parser.py
tests/: helpers.py  test_accessors.py  test_align.py  test_any.py  test_arrays.py  test_asm.py  test_backtraces.py  test_block_expr.py  test_bounds.py  test_builtin_structs.py  test_byte.py  test_case.py  test_char.py  test_cli.py  test_codegen.py  test_codegen_ratchet.py  test_codemodel.py  test_compound_assign.py  test_conditional.py  test_const.py  test_const_params.py  test_constructors.py  test_defer.py  test_destructors.py  test_diagnostics_conformance.py  test_dict.py  test_directives.py  test_dot_calls.py  test_enumerate.py  test_enums.py  test_equality.py  test_error_handling.py  test_execution.py  test_explicit_type_args.py  test_extends.py  test_extern.py  test_extern_struct_abi.py  test_fat_views.py  test_for_in.py  test_format.py  (+68 more)
(+101 files in other folders)
