[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "mcc"
version = "0.3.1"
description = "A modern C-style language compiled to native code via LLVM"
readme = "README.md"
requires-python = ">=3.14"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "Felipe Cabrera" }]
keywords = ["compiler", "llvm", "language", "codegen"]
dependencies = ["llvmlite"]

[project.urls]
Homepage = "https://github.com/fecabrera/mcc"
Repository = "https://github.com/fecabrera/mcc"

[project.scripts]
mcc = "mcc.driver:main"

# The mcc package plus the bundled standard library. The libmc/ tree lives at
# the repo root for development; here it is mapped under the package (mcc/libmc)
# so it ships inside the wheel, where driver._find_stdlib() picks it up.
[tool.setuptools]
packages = [
    "mcc",
    "mcc.codegen",
    "mcc.libmc",
    "mcc.libmc.libc",
    "mcc.libmc.hashing",
]

[tool.setuptools.package-dir]
"mcc.libmc" = "libmc"
"mcc.libmc.libc" = "libmc/libc"
"mcc.libmc.hashing" = "libmc/hashing"

[tool.setuptools.package-data]
"mcc.libmc" = ["*.mc", "*.md"]
"mcc.libmc.libc" = ["*.mc"]
"mcc.libmc.hashing" = ["*.mc"]
