[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "mcc"
version = "0.6.1"
description = "A modern C-style language compiled to native code via LLVM"
readme = "README.md"
requires-python = ">=3.14"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "Felipe Cabrera" }]
keywords = ["compiler", "llvm", "language", "codegen"]
dependencies = ["llvmlite"]

[project.urls]
Homepage = "https://github.com/fecabrera/mcc"
Repository = "https://github.com/fecabrera/mcc"

[project.scripts]
mcc = "mcc.driver:main"

# The mcc package plus the bundled standard library. The lib/ tree lives at
# the repo root for development; here it is mapped under the package (mcc/lib)
# so it ships inside the wheel, where driver._find_stdlib() picks it up. It
# holds std/ (mcc modules) and libc/ (C bindings).
[tool.setuptools]
packages = [
    "mcc",
    "mcc.codegen",
    "mcc.lib",
    "mcc.lib.std",
    "mcc.lib.std.hashing",
    "mcc.lib.libc",
]

[tool.setuptools.package-dir]
"mcc.lib" = "lib"
"mcc.lib.std" = "lib/std"
"mcc.lib.std.hashing" = "lib/std/hashing"
"mcc.lib.libc" = "lib/libc"

[tool.setuptools.package-data]
"mcc.lib" = ["*.md"]
"mcc.lib.std" = ["*.mc"]
"mcc.lib.std.hashing" = ["*.mc"]
"mcc.lib.libc" = ["*.mc"]
